--- a/style.css
+++ b/style.css
@@ -76,40 +76,37 @@ ul {
     float:right;
     width:40%;
 }
-/* The dropdown container */
+
 .dropdown {
     float: left;
     overflow: hidden;
   }
-  
-  /* Dropdown button */
+
   .dropdown .dropbtn {
-    font-size: 16px;
-    border: none;
-    outline: none;
-    color: white;
-    padding: 14px 16px;
-    background-color: inherit;
-    font-family: inherit; /* Important for vertical align on mobile phones */
-    margin: 0; /* Important for vertical align on mobile phones */
+    background-color: rgb(243, 182, 102);
+    outline: rgb(243, 182, 102);;
+    margin-top: 10px;
+    -webkit-text-stroke-width: 0.75px;
+    -webkit-text-stroke-color: white;
+    text-decoration: none;
+    font-family: "Kiwi Maru Medium";
+    color: rgb(0, 0, 0);
+    font-size: 30px;
   }
   
-  /* Add a red background color to navbar links on hover */
   .navbar a:hover, .dropdown:hover .dropbtn {
-    background-color: red;
+    background-color: rgb(255, 187, 187);
   }
   
-  /* Dropdown content (hidden by default) */
   .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #f9f9f9;
+    background-color: rgb(255, 138, 138);
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
   }
   
-  /* Links inside the dropdown */
   .dropdown-content a {
     float: none;
     color: black;
@@ -119,12 +116,10 @@ ul {
     text-align: left;
   }
   
-  /* Add a grey background color to dropdown links on hover */
   .dropdown-content a:hover {
-    background-color: #ddd;
+    background-color: rgb(252, 80, 80);
   }
   
-  /* Show the dropdown menu on hover */
   .dropdown:hover .dropdown-content {
     display: block;
   }
