--- a/style.css
+++ b/style.css
@@ -109,6 +109,8 @@ ul {
   
   .dropdown-content a {
     float: none;
+    -webkit-text-stroke-width: 0.01px;
+    -webkit-text-stroke-color: white;
     color: black;
     padding: 12px 16px;
     text-decoration: none;
