--- a/style.css
+++ b/style.css
@@ -45,19 +45,15 @@ body {
 .navbar {
     margin-bottom: 200px;
 }
-li {
-    align-items: left;
-    float: left;
-}
 .navbar2{
     -webkit-text-stroke-width: 0.75px;
     -webkit-text-stroke-color: white;
     margin-left: 20px;
     font-size: 30px;
+    float:left;
     text-decoration: none;
     font-family: "Kiwi Maru Medium";
-    color: rgb(0, 0, 0);
-    float: left; 
+    color: rgb(0, 0, 0); 
     display: block;
     padding: 10px;
     background-color: rgb(243, 182, 102);
@@ -125,3 +121,59 @@ ul {
   .dropdown:hover .dropdown-content {
     display: block;
   }
+  .vertical-menu {
+    font-size: 30px;
+    font-family: "Kiwi Maru Regular";
+    -webkit-text-stroke-width: 0.01px;
+    -webkit-text-stroke-color: white;
+    margin-right:30px;
+    width: 700px;
+    height:700px;
+    float: right;
+}
+
+.vertical-menu a {
+    background-color: rgb(197, 73, 73);
+    color: black;
+    display: block;
+    padding: 12px;
+    text-decoration: none;
+}
+
+.vertical-menu a:hover {
+    background-color: rgb(252, 80, 80);
+}
+
+.vertical-menu a.active {
+    color: rgb(255, 138, 138);
+}
+#menu-overview{
+  margin-top: 100px;
+  margin-bottom: 100px;
+}
+.breakline {
+  background-color: white;
+  margin-bottom:1000px;
+}
+.overview {
+  font-size: 30px;
+    font-family: "Kiwi Maru Regular";
+    -webkit-text-stroke-width: 0.05px;
+    -webkit-text-stroke-color: white;
+    margin-left: 30px;
+    width: 90%;
+    height: 150%;
+    float: left;
+  background-color: rgb(197, 73, 73);
+}
+.endusers {
+  font-size: 30px;
+    font-family: "Kiwi Maru Regular";
+    -webkit-text-stroke-width: 0.05px;
+    -webkit-text-stroke-color: white;
+    margin-left: 30px;
+    width: 90%;
+    height: 80%;
+    float: left;
+  background-color: rgb(238, 105, 105);
+}
