--- a/style.css
+++ b/style.css
@@ -125,6 +125,8 @@ ul {
     display: block;
   }
   .vertical-menu {
+    margin-top:100px;
+    margin-left:auto;
     font-size: 30px;
     font-family: "Kiwi Maru Regular";
     -webkit-text-stroke-width: 0.01px;
@@ -132,7 +134,6 @@ ul {
     margin-right:30px;
     width: 700px;
     height:700px;
-    float: right;
 }
 
 .vertical-menu a {
@@ -155,25 +156,27 @@ ul {
   margin-bottom: 100px;
 }
 .overview {
+  margin-right: auto;
   font-size: 30px;
     font-family: "Kiwi Maru Regular";
     -webkit-text-stroke-width: 0.05px;
     -webkit-text-stroke-color: white;
     margin-left: 30px;
-    width: 90%;
+    width: 50%;
     height: 150%;
   background-color: rgb(197, 73, 73);
   margin-bottom: 100px;
   padding-bottom: 100px;
 }
 .endusers {
+  margin-left: 30px;
+  margin-right: auto;
   font-size: 30px;
     font-family: "Kiwi Maru Regular";
     -webkit-text-stroke-width: 0.05px;
     -webkit-text-stroke-color: white;
-    margin-left: 30px;
-    width: 90%;
-    height: 80%;
+    width: 50%;
+    height: 20%;
     margin-bottom: 100px;
   background-color: rgb(238, 105, 105);
 }
@@ -182,9 +185,10 @@ ul {
     font-family: "Kiwi Maru Regular";
     -webkit-text-stroke-width: 0.05px;
     -webkit-text-stroke-color: white;
-    margin-left: 30px;
-    width: 90%;
-    height: 80%;
+margin-right: auto;
+margin-left: 30px;
+    width: 40%;
+    height: 150%;
     margin-bottom: 100px;
   background-color: rgb(224, 64, 64);
 }
@@ -193,9 +197,10 @@ ul {
     font-family: "Kiwi Maru Regular";
     -webkit-text-stroke-width: 0.05px;
     -webkit-text-stroke-color: white;
-    margin-left: 30px;
-    width: 90%;
-    height: 500px;
+    margin-right: 30px;
+margin-left: auto;
+    width: 40%;
+    height: 150%;
     margin-bottom: 100px;
   background-color: rgb(224, 64, 64);
 }
