--- a/style.css
+++ b/style.css
@@ -126,7 +126,7 @@ ul {
   }
   .vertical-menu {
     margin-top:100px;
-    margin-left:auto;
+   float:right;
     font-size: 30px;
     font-family: "Kiwi Maru Regular";
     -webkit-text-stroke-width: 0.01px;
@@ -156,7 +156,7 @@ ul {
   margin-bottom: 100px;
 }
 .overview {
-  margin-right: auto;
+  float:left;
   font-size: 30px;
     font-family: "Kiwi Maru Regular";
     -webkit-text-stroke-width: 0.05px;
@@ -170,7 +170,7 @@ ul {
 }
 .endusers {
   margin-left: 30px;
-  margin-right: auto;
+  float:right;
   font-size: 30px;
     font-family: "Kiwi Maru Regular";
     -webkit-text-stroke-width: 0.05px;
@@ -185,7 +185,7 @@ ul {
     font-family: "Kiwi Maru Regular";
     -webkit-text-stroke-width: 0.05px;
     -webkit-text-stroke-color: white;
-margin-right: auto;
+float: left;
 margin-left: 30px;
     width: 40%;
     height: 150%;
@@ -198,7 +198,7 @@ margin-left: 30px;
     -webkit-text-stroke-width: 0.05px;
     -webkit-text-stroke-color: white;
     margin-right: 30px;
-margin-left: auto;
+float: right;
     width: 40%;
     height: 150%;
     margin-bottom: 100px;
