--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ a {
     margin-left: 50px;
     font-size: 60px;
     float:left;
+    width:40%; 
     text-align: left;
     font-family: "Kiwi Maru Medium";
     -webkit-text-stroke-width: 0.75px;
@@ -126,7 +127,8 @@ ul {
   }
   .vertical-menu {
     margin-top:100px;
-   float:right;
+    float:right;
+    width:20%; 
     font-size: 30px;
     font-family: "Kiwi Maru Regular";
     -webkit-text-stroke-width: 0.01px;
@@ -155,8 +157,12 @@ ul {
   margin-top: 100px;
   margin-bottom: 100px;
 }
-.overview {
+.overview { 
   float:left;
+  width:20%; 
+  margin-top: 40px;
+margin-bottom: 20px;
+min-height: 350px;
   font-size: 30px;
     font-family: "Kiwi Maru Regular";
     -webkit-text-stroke-width: 0.05px;
@@ -169,8 +175,11 @@ ul {
   padding-bottom: 100px;
 }
 .endusers {
+  float:left;
+  margin-right: 300px;
+  margin-top: 40px;
+  margin-bottom: 20px;
   margin-left: 30px;
-  float:right;
   font-size: 30px;
     font-family: "Kiwi Maru Regular";
     -webkit-text-stroke-width: 0.05px;
@@ -181,30 +190,31 @@ ul {
   background-color: rgb(238, 105, 105);
 }
 .requirements {
+  float:left;
   font-size: 30px;
     font-family: "Kiwi Maru Regular";
     -webkit-text-stroke-width: 0.05px;
     -webkit-text-stroke-color: white;
-float: left;
 margin-left: 30px;
     width: 40%;
-    height: 150%;
+    height: 200%;
     margin-bottom: 100px;
   background-color: rgb(224, 64, 64);
 }
 .implications {
+  float:right;
   font-size: 30px;
     font-family: "Kiwi Maru Regular";
     -webkit-text-stroke-width: 0.05px;
     -webkit-text-stroke-color: white;
     margin-right: 30px;
-float: right;
     width: 40%;
     height: 150%;
     margin-bottom: 100px;
   background-color: rgb(224, 64, 64);
 }
 .development {
+  float:left;
   font-size: 30px;
   text-decoration: none;
     font-family: "Kiwi Maru Regular";
@@ -213,11 +223,42 @@ float: right;
     margin-left: 30px;
     width: 50%;
     height: 150%;
-    float: left;
     margin-bottom: 400px;
   background-color: rgb(224, 114, 114)
 }
 #developmenttext {
   -webkit-text-stroke-width: 0.05px;
     -webkit-text-stroke-color: white;
+}
+
+.task {
+  display:block;
+  background-color:rgb(245, 148, 148);
+  border-color:rgb(180, 39, 39);
+  margin-left: 180px;
+  margin-right: 180px;
+  margin-top:400px;
+  float: left;
+  min-height: 80%;
+}
+.task h1{
+  text-align: center;
+  font-size: 70px;
+  font-family: "Kiwi Maru Medium";
+  -webkit-text-stroke-width: 2px;
+    -webkit-text-stroke-color: white;
+}
+.task p {
+  display:inline-block;
+  margin-left: 50px;
+  margin-top: 50px;
+  background-color:rgb(250, 110, 110);
+  font-size: 40px;
+  font-family: "Kiwi Maru Medium";
+  -webkit-text-stroke-width: 0.1px;
+    -webkit-text-stroke-color: white;
+}
+.task img {
+  display: inline-block;
+  max-width: 30%;
 }
