--- a/style.css
+++ b/style.css
@@ -4,9 +4,10 @@ html {
 body {
     height:100%;
     margin: 0;
-    background-image: linear-gradient(rgb(255, 152, 152), rgb(255, 98, 98));
+    background-image: url(PorscheGt3rs.jpg);
     background-repeat: no-repeat;
     background-attachment: fixed;
+    background-size: cover;
 }
 @font-face {
     font-family: 'Kiwi Maru Regular';
@@ -60,7 +61,7 @@ a {
     color: rgb(0, 0, 0); 
     display: block;
     padding: 10px;
-    background-color: rgb(243, 182, 102);
+    background-color: rgba(243, 182, 102, 0.4);
 }
 ul {
     position: fixed;
@@ -69,7 +70,7 @@ ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
-    background-color: rgb(243, 182, 102);
+    background-color: rgba(243, 182, 102,0.5);
 }
 #JeskoAttack{
     margin-right:50px;
@@ -83,8 +84,8 @@ ul {
   }
 
   .dropdown .dropbtn {
-    background-color: rgb(243, 182, 102);
-    outline: rgb(243, 182, 102);;
+    background-color: rgba(243, 182, 102, 0.5);
+    outline: rgba(243, 182, 102, 0.5);;
     margin-top: 10px;
     -webkit-text-stroke-width: 0.75px;
     -webkit-text-stroke-color: white;
@@ -95,13 +96,13 @@ ul {
   }
   
   .navbar a:hover, .dropdown:hover .dropbtn {
-    background-color: rgb(255, 187, 187);
+    background-color: rgba(243, 182, 102, 0.5);
   }
   
   .dropdown-content {
     display: none;
     position: absolute;
-    background-color: rgb(255, 138, 138);
+    background-color: rgba(253, 233, 206, 0.589);
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
@@ -119,7 +120,7 @@ ul {
   }
   
   .dropdown-content a:hover {
-    background-color: rgb(252, 80, 80);
+    background-color: rgba(252, 80, 80, 0.5);
   }
   
   .dropdown:hover .dropdown-content {
@@ -139,7 +140,7 @@ ul {
 }
 
 .vertical-menu a {
-    background-color: rgb(197, 73, 73);
+    background-color: rgba(252, 80, 80, 0.5);
     color: black;
     display: block;
     padding: 12px;
@@ -147,11 +148,11 @@ ul {
 }
 
 .vertical-menu a:hover {
-    background-color: rgb(252, 80, 80);
+    background-color: rgba(252, 80, 80, 0.5);
 }
 
 .vertical-menu a.active {
-    color: rgb(255, 138, 138);
+    color: rgba(255, 145, 145, 0.5);
 }
 #menu-overview{
   margin-top: 100px;
@@ -170,7 +171,7 @@ min-height: 350px;
     margin-left: 30px;
     width: 50%;
     height: 150%;
-  background-color: rgb(197, 73, 73);
+  background-color: rgba(245, 122, 122, 0.5);
   margin-bottom: 100px;
   padding-bottom: 100px;
 }
@@ -187,7 +188,7 @@ min-height: 350px;
     width: 50%;
     height: 20%;
     margin-bottom: 100px;
-  background-color: rgb(238, 105, 105);
+  background-color: rgba(253, 135, 135, 0.5);
 }
 .requirements {
   float:left;
@@ -199,7 +200,7 @@ margin-left: 30px;
     width: 40%;
     height: 200%;
     margin-bottom: 100px;
-  background-color: rgb(224, 64, 64);
+  background-color: rgba(253, 135, 135, 0.5);
 }
 .implications {
   float:right;
@@ -211,7 +212,7 @@ margin-left: 30px;
     width: 40%;
     height: 150%;
     margin-bottom: 100px;
-  background-color: rgb(224, 64, 64);
+  background-color: rgba(253, 135, 135, 0.5);
 }
 .development {
   float:left;
@@ -224,7 +225,7 @@ margin-left: 30px;
     width: 50%;
     height: 150%;
     margin-bottom: 400px;
-  background-color: rgb(224, 114, 114)
+  background-color: rgba(243, 168, 168, 0.63)
 }
 #developmenttext {
   -webkit-text-stroke-width: 0.05px;
