--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ a {
     -webkit-text-stroke-color: white;
 }
 .navbar {
-    margin-bottom: 200px;
+    margin-bottom: 300px;
 }
 .navbar2{
     -webkit-text-stroke-width: 0.75px;
@@ -75,7 +75,7 @@ a {
     color: rgb(0, 0, 0); 
     display: block;
     padding: 10px;
-    background-color: rgba(41, 37, 27, 0.226);
+    background-color: rgba(255, 247, 225, 0.226);
 }
 ul {
     position: fixed;
@@ -84,7 +84,7 @@ ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
-    background-color: rgba(45, 71, 44, 0.226);
+    background-color: rgba(112, 112, 112, 0.226);
 }
 #JeskoAttack{
     margin-right:50px;
@@ -98,8 +98,8 @@ ul {
   }
 
   .dropdown .dropbtn {
-    background-color: rgba(169, 199, 130, 0.418);
-    outline: rgba(152, 204, 85, 0.418);
+    background-color: rgba(126, 128, 124, 0.418);
+    outline: rgba(250, 255, 244, 0.418);
     margin-top: 10px;
     -webkit-text-stroke-width: 0.75px;
     -webkit-text-stroke-color: white;
@@ -110,14 +110,14 @@ ul {
   }
   
   .navbar a:hover, .dropdown:hover .dropbtn {
-    background-color: rgba(221, 255, 190, 0.288);
+    background-color: rgba(218, 218, 218, 0.288);
   }
   
   .dropdown-content {
     display: none;
     position: absolute;
     background-blend-mode: color;
-    background-color: rgba(79, 122, 38, 0.288);
+    background-color: rgba(255, 238, 184, 0.288);
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
@@ -155,7 +155,7 @@ ul {
 }
 
 .vertical-menu a {
-    background-color: rgba(169, 252, 158, 0.281);
+    background-color: rgba(233, 255, 230, 0.281);
     -webkit-text-stroke-width: 0.5px;
     -webkit-text-stroke-color: white;
     color: black;
@@ -176,16 +176,17 @@ ul {
   margin-bottom: 100px;
 }
 #text{
+  color:rgb(75, 70, 70);
   font-size: 30px;
   text-decoration: none;
   font-family: "Kiwi Maru Regular";
-  -webkit-text-stroke-width: 0.05px;
-  -webkit-text-stroke-color: white;
+  -webkit-text-stroke-width: 0.5px;
+  -webkit-text-stroke-color: rgb(0, 0, 0);
 }
 .overview { 
   float:left;
   clear: right;
-  width:20%; 
+  width:60%; 
   margin-top: 40px;
   margin-bottom: 20px;
   min-height: 350px;
@@ -193,7 +194,7 @@ ul {
   width: 50%;
   height: 150%;
   background-blend-mode: lighten;
-  background-color: rgba(169, 252, 158, 0.363);
+  background-color: rgba(255, 255, 255, 0.363);
   margin-bottom: 100px;
   padding-bottom: 100px;
 }
@@ -204,10 +205,10 @@ ul {
   margin-top: 40px;
   margin-bottom: 20px;
   margin-left: 30px;
-  width: 50%;
+  width: 80%;
   height: 20%;
   margin-bottom: 100px;
-  background-color: rgba(169, 252, 158, 0.603);
+  background-color: rgba(189, 189, 189, 0.603);
 }
 .requirements {
   float:left;
@@ -215,7 +216,7 @@ ul {
   width: 40%;
   height: 200%;
   margin-bottom: 100px;
-  background-color: rgba(96, 143, 90, 0.795);
+  background-color: rgba(194, 196, 193, 0.795);
 }
 .implications {
   float:right;
@@ -223,7 +224,7 @@ ul {
   width: 40%;
   height: 150%;
   margin-bottom: 100px;
-  background-color: rgba(96, 143, 90, 0.795);
+  background-color: rgba(165, 162, 162, 0.795);
 }
 .development {
   text-align: center;
@@ -236,7 +237,7 @@ ul {
   clear: both;
   width: 50%;
   height: 150%;
-  background-color: rgba(169, 252, 158, 0.466);
+  background-color: rgba(187, 189, 187, 0.466);
 }
 
 
@@ -246,7 +247,7 @@ ul {
 
 .task {
   display:block;
-  background-color:rgba(169, 252, 158, 0.363);
+  background-color:rgba(190, 194, 189, 0.363);
   border-color:rgba(12, 80, 4, 0.534);
   margin-left: 180px;
   margin-right: 180px;
