--- a/style.css
+++ b/style.css
@@ -240,10 +240,10 @@ ul {
   background-color: rgba(187, 189, 187, 0.466);
 }
 
-
-
-
-
+ /* Task Stuff for Development */
+ /* Task Stuff for Development */
+ /* Task Stuff for Development */
+ /* Task Stuff for Development */
 
 .task {
   display:block;
@@ -259,6 +259,7 @@ ul {
 #task-right{
   float: right;
 }
+
 .task h1{
   text-align: center;
   font-size: 70px;
@@ -283,5 +284,5 @@ ul {
     float:right;
   margin: 0 1.5%;
   max-height: 80%;
-  width: 30%;
+  width: 30%;;
 }
